# binance-phicube

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  ONBOARDING.md  PLANS.md  PRD.md  README.md  SPEC_035_DELIVERY_REPORT.md  SPEC_035_REFINED.md  SPEC_035_REFINEMENT_SUMMARY.md  VALIDATION_REPORT_TASK_034_08.md  code_review.md  docker-compose.simulation.yml  docker-compose.yml  opencode.json  pyproject.toml  test-output.txt
.claude/: settings.json  settings.local.json
.codex/: codex-instructions.md  config.toml
.davi/: README.md
agents/: appsec.md  backend-senior.md  planner-agent.md  quant-developer.md  reviewer.md  risk-manager.md  time-a-refinamento.md  time-b-execucao.md  trader-senior.md  validation-agent.md
backtest_results/: ATOMUSDT_15m_20260506_220451.json  ATOMUSDT_15m_20260506_221950.json  ATOMUSDT_15m_20260506_222439.json  ATOMUSDT_15m_20260506_224139.json
contracts/: task.json
docker/: Dockerfile  Dockerfile.api
docs/: CODEX_BEST_PRACTICES_ADOPTION.md  CODEX_TASK_TEMPLATE.md  OPERATIONS.md  SKILLS_ADOPTION_PLAYBOOK.md  TASK_034_03_RESILIENT_REPOSITORY.md  TASK_034_04_IMPLEMENTATION_SUMMARY.md  UX_DASHBOARD_V2_IMPLEMENTATION_SPEC.md  phicube_combined_standalone.extracted.txt
frontend/: .dockerignore  .eslintrc.json  .gitignore  DEVELOPMENT.md  Dockerfile  PERFORMANCE.md  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
monitoring/: prometheus.yml
src/: main.py
(+828 files in other folders)
