[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-phicube"
version = "0.1.0"
description = "Auto trade system for Binance Futures implementing the BO Williams Phicube strategy"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.3.0",
    "binance-connector>=3.12.0",
    "binance-futures-connector>=4.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "motor>=3.4.0",
    "pymongo>=4.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.2",
    "prometheus-client>=0.19.0",
    # OAuth
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.entry-points."phicube.strategies"]
williams = "src.strategies.williams_strategy:WilliamsStrategy"
phicube = "src.strategies.phicube_strategy:PhicubeStrategy"

[project.scripts]
phicube = "src.main:entrypoint"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
